# cmake_template

./: .gitignore  CMakeLists.txt  README.md
sh/: rmain.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_output.py
